--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write   # 👈 this is the key: allows creating/updating releases
+
 jobs:
   build:
     runs-on: ubuntu-latest
